Update test after aggregation API update (#166)